[project]
name = "docs-doctor"
version = "0.1.0"
description = "A LangGraph-based MoE agent with a package driven knowledge base"
authors = [
    { name = "Jules Astier", email = "astier.jules@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
readme = "README.md"
license = { text = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "supabase>=2.12.0",
    "streamlit >=1.40.2",
    "pydantic ~=2.10.1",
    "pydantic-settings ~=2.6.1",
    "hatchling ~=1.27.0",
    "langgraph-checkpoint-sqlite >=2.0.1",
    "psycopg >=3.2.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
docs-doctor = "cli:cli"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["/src"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "E501",  # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true